# AI_Diplomacy

./: .env.example  .gitignore  AGENT_FIXES_SUMMARY.md  CHANGELOG.md  CLAUDE.md  FINAL_FIX_SUMMARY.md  FINAL_IMPLEMENTATION_COMPLETE.md  FIXES_SUMMARY_V2.md  ISSUES.md  README.md  REFACTOR_PROGRESS.md  RULES.MD  TEST_RESULTS_SUMMARY.md  TRANSFORMATION_COMPLETE.md  ai_diplomacy_usage.db  analyze_game_moments.py  analyze_game_moments_llm.py  analyze_game_moments_llm_new.py  analyze_game_results.py  analyze_lies_focused.py  analyze_sample.py  digest.txt  docker-compose.yaml  docker-compose.yml  elevenlabs-test.html  env_template.txt  experiment_log.md  focused_lie_report.md  game.json  game_manifesto.txt  game_moments.json  game_moments_report.md  ingest.sh  integration_test_wwi_2p.py  integration_test_wwi_2p.sh  lie_analysis_summary.md  llm_usage.db  lm_game.py  lm_game_test.py  lm_service_versus.py  (+38 more)
.cursor/rules/: testing-guidelines.mdc
.github/workflows/: e2e.yml  python-test.yml
ai_animation/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  experiment_log.md  index.html  package-lock.json  package.json  playwright.config.ts  reorganize_games.sh  show_conversation.sh  tsconfig.json  vite.config.js
ai_animation/public/: .dockerignore  default_game.json  default_game0.json  default_game2.json  standings.csv  test-game.json
ai_animation/src/: backgroundAudio.ts  config.ts  domElements.ts  gameState.ts  logger.ts  main.js  main.ts  phase.ts  speech.ts  style.css
ai_diplomacy/: __init__.py  _llm_coordinator_legacy.py  agent.py  agent_manager.py  clients.py  constants.py  conversation_history.py  digest.txt  game_config.py  game_history.py  game_orchestrator.py  game_results.py  general_utils.py  initialization.py  llm_coordinator.py  llm_interface.py  llm_utils.py  llms.txt  logging_setup.py  long_story_short.py  map_utils.py  model_loader.py  model_utils.py  narrative.py  negotiations.py  phase_summary.py  planning.py  possible_order_context.py  prompt_constructor.py  prompt_strategy.py  prompt_utils.py  test_recursive_summarization.py  utils.py
ai_diplomacy/agents/: __init__.py  agent_state.py  base.py  bloc_llm_agent.py  factory.py  history_interpreter.py  llm_agent.py  llm_prompt_strategy.py  neutral_agent.py  null_agent.py  scripted_agent.py
ai_diplomacy/config/: game_config.py
ai_diplomacy/core/: __init__.py  manager.py  message.py  order.py  state.py
ai_diplomacy/domain/: __init__.py  adapter_diplomacy.py  board.py  game_history.py  history.py  message.py  messaging.py  order.py  phase.py  state.py
ai_diplomacy/orchestrators/: build.py  movement.py  negotiation.py  phase_orchestrator.py  result_parser.py  retreat.py
ai_diplomacy/prompts/: __init__.py  austria_system_prompt.txt  bloc_order_prompt.j2  context_prompt.txt  conversation_instructions.txt  diary_consolidation_prompt.j2  diary_consolidation_prompt.txt  england_system_prompt.txt  few_shot_example.txt  france_system_prompt.txt  germany_system_prompt.txt  italy_system_prompt.txt  message_summary_prompt.txt  negotiation_diary_prompt.txt  order_diary_prompt.j2  order_diary_prompt.txt  order_instructions.txt  phase_result_diary_prompt.txt  phase_summary_prompt.txt  planning_instructions.txt  recursive_summary_prompt.txt  russia_system_prompt.txt  state_update_prompt.txt  system_prompt.txt  turkey_system_prompt.txt
ai_diplomacy/runtime/: __init__.py  agents.py  build.py  game_manager.py  (+4 more)
assets/: standard_coords.json
docs/: LOCAL_NETWORK_OLLAMA_SETUP.md  phase2_implementation_plan.md
experiments/: SUMMARY_negotiation_improvements.md  async_api_calls_experiment_log.md  improve_negotiation_awareness.md
generic_llm_framework/: agent.py  constants.py  core.py  llm_coordinator.py  llm_utils.py  prompt_strategy.py
prompts/: build_conversation_reply.txt  few_shot_example.txt  instructions.txt  system_prompt_conversation.txt  system_prompt_response.txt
results/: game_manifesto.txt  lmvsgame.json  lmvsgame.json_20250205_212335.json  lmvsgame.json_20250206_074652.json  lmvsgame.json_20250207_080050.json  lmvsgame.json_20250208_123903.json  lmvsgame.json_20250209_213551.json
tests/: _diplomacy_fakes.py  _shared_fixtures.py  conftest.py  digest.txt  test_agent_manager.py  test_agent_state.py  test_config.py  test_context_provider.py  test_game_config.py  test_game_history.py  test_game_orchestrator.py  test_game_results.py  test_llm_agent.py  test_llm_prompt_strategy.py  test_llm_utils.py  test_lm_game.py  test_logging_setup.py  test_mocked_llm_calls.py  test_model_integration.py  test_scenarios.py  test_stage0.py  test_stage1.py  test_stage2.py
twitch-streamer/: Dockerfile  chrome-launcher.sh  entrypoint.sh  pulse-virtual-audio.sh
(+166 files in other folders)
